# audio

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  weekly.yml
audio/: Cargo.toml  README.md
audio-core/: Cargo.toml  README.md
audio-core/src/: as_interleaved.rs  as_interleaved_mut.rs  buf.rs  buf_mut.rs  channel.rs  channel_mut.rs  channels.rs  channels_mut.rs  exact_size_buf.rs  frame.rs  frame_mut.rs  interleaved.rs  interleaved_buf.rs  interleaved_buf_mut.rs  interleaved_channel.rs  interleaved_channel_mut.rs  io.rs  lib.rs  linear.rs  linear_channel.rs  linear_channel_mut.rs  read_buf.rs  resizable_buf.rs  sample.rs  slice.rs  translate.rs  uniform_buf.rs  write_buf.rs
audio-core/src/buf/: as_interleaved_mut.rs  chunk.rs  exact_size_buf.rs  interleaved_buf.rs  limit.rs  macros.rs  range.rs  resizable_buf.rs  skip.rs  tail.rs
audio-core/src/channel/: iter.rs
audio-core/src/interleaved/: macros.rs  tests.rs
audio-core/src/translate/: tests.rs
audio-device/: Cargo.toml  README.md
audio-device-alsa-sys/: Cargo.toml  README.md  build.rs
audio-device-alsa-sys/src/: bindings.rs  lib.rs
audio-device-bindings/: Cargo.toml
audio-device-bindings/src/: lib.rs  main.rs
audio-device-generate/: Cargo.toml  README.md
audio-device-generate/src/: main.rs
audio-device-pipewire-sys/: Cargo.toml  README.md  build.rs
audio-device-pipewire-sys/src/: bindings.rs  lib.rs
audio-device-pulse-sys/: Cargo.toml  README.md  build.rs
audio-device-pulse-sys/src/: bindings.rs  lib.rs
audio-device-windows-sys/: Cargo.toml  README.md
audio-device-windows-sys/src/: bindings.rs  lib.rs
audio-device/examples/: alsa-async.rs  alsa-list.rs  alsa-open.rs  alsa.rs  events.rs  poll.rs  pulse.rs  wasapi-async.rs  wasapi.rs
audio-device/src/: alsa.rs  bindings.rs  device.rs  directsound.rs  driver.rs  error.rs  lib.rs  libc.rs  loom.rs  macros.rs  unix.rs  wasapi.rs  windows.rs
audio-device/src/alsa/: access_mask.rs  async_writer.rs  card.rs  cell.rs  channel_area.rs  configurator.rs  control.rs  enums.rs  format_mask.rs  hardware_parameters.rs  mod.rs  pcm.rs  sample.rs  software_parameters.rs  writer.rs
audio-device/src/driver/: events.rs  poll.rs
audio-device/src/loom/: mod.rs  sync.rs
audio-device/src/pipewire/: main_loop.rs  mod.rs  property_list.rs
audio-device/src/pulse/: context.rs  enums.rs  error.rs  main_loop.rs  mod.rs  property_list.rs
audio-device/src/runtime/: atomic_waker.rs  events.rs  mod.rs  poll.rs
audio-device/src/unix/: errno.rs  mod.rs  poll.rs
audio-device/src/wasapi/: buffer_mut.rs  client.rs  initialized_client.rs  mod.rs  render_client.rs  sample.rs
audio-device/src/windows/: event.rs  mod.rs
audio-device/src/xaudio2/: audio.rs
audio-generator/: Cargo.toml  README.md
audio-generator/src/: generator.rs  lib.rs  sin.rs  sine.rs
audio-generator/src/generator/: amplitude.rs  iter.rs
audio/src/: buf.rs  channel.rs  dynamic.rs  frame.rs  interleaved.rs  io.rs  lib.rs  macros.rs  sequential.rs  slice.rs  utils.rs  wrap.rs
audio/src/buf/: dynamic.rs  interleaved.rs  sequential.rs  utils.rs
audio/src/buf/dynamic/: iter.rs
audio/src/buf/interleaved/: buf.rs  iter.rs
audio/src/buf/sequential/: buf.rs  iter.rs  raw.rs  uniform.rs
audio/src/channel/: interleaved.rs  linear.rs
audio/src/channel/interleaved/: macros.rs  tests.rs
audio/src/channel/linear/: iter.rs  macros.rs
audio/src/dynamic/: iter.rs
audio/src/frame/: dynamic.rs  interleaved.rs  sequential.rs
audio/src/interleaved/: channel.rs  iter.rs
audio/src/io/: macros.rs  read.rs  read_write.rs  utils.rs  write.rs
audio/src/sequential/: iter.rs
audio/src/tests/: byte_arrays.rs  copy_channel.rs  copy_channels.rs  dynamic.rs  interleaved.rs  io.rs  mod.rs  sequential.rs
audio/src/wrap/: dynamic.rs  interleaved.rs  sequential.rs
bittle/: Cargo.toml  README.md
bittle/src/: bit_set.rs  lib.rs  macros.rs  mask.rs
examples/: Cargo.toml
generate/: Cargo.toml  pipewire.h  pulse.h
rotary/: Cargo.toml  README.md
rotary-core/: Cargo.toml  README.md
rotary-core/src/: buf.rs  channel.rs  io.rs  lib.rs
rotary-core/src/buf/: as_interleaved.rs  as_interleaved_mut.rs  chunk.rs  exact_size_buf.rs  interleaved_buf.rs  limit.rs  resizable_buf.rs  skip.rs  tail.rs
rotary-core/src/io/: read.rs  read_write.rs  utils.rs  write.rs
rotary-device/: Cargo.toml
rotary-device-bindings/: Cargo.toml
rotary-device-bindings/src/: main.rs
rotary-device/benches/: on-audio-thread.rs
rotary-device/examples/: directsound.rs  on-audio-thread.rs  wasapi.rs  xaudio2.rs
rotary-device/src/: audio_thread.rs  bindings.rs  directsound.rs  lib.rs  wasapi.rs  windows.rs  xaudio2.rs
rotary-device/src/wasapi/: sample.rs
rotary-device/src/windows/: event.rs
rotary-generator/: Cargo.toml
rotary-generator/src/: generator.rs  lib.rs
rotary/src/: buf.rs  dynamic.rs  interleaved.rs  io.rs  lib.rs  macros.rs  sequential.rs  utils.rs  wrap.rs
rotary/src/buf/: utils.rs
rotary/src/dynamic/: iter.rs
rotary/src/interleaved/: channel.rs
rotary/src/io/: read.rs  read_write.rs  utils.rs  write.rs
rotary/src/sequential/: iter.rs
rotary/src/tests/: dynamic.rs  interleaved.rs  io.rs  mod.rs
rotary/src/wrap/: interleaved.rs  sequential.rs
src/: audio_buffer.rs  bit_set.rs  buf.rs  buf_io.rs  channel.rs  channel_slice.rs  dynamic.rs  interleaved.rs  io.rs  lib.rs  macros.rs  mask.rs  masked_audio_buffer.rs  masked_dynamic.rs  range.rs  sample.rs  sequential.rs  translate.rs  utils.rs  wrap.rs
src/buf/: chunk.rs  limit.rs  offset.rs  read.rs  read_write.rs  skip.rs  tail.rs  write.rs
src/channel/: iter.rs
src/io/: read.rs  (+3 more)
ste/: Cargo.toml  README.md
ste/benches/: benches.rs
ste/examples/: recover_from_panic.rs  simple_async.rs  submit.rs  submit_async.rs  submit_async_threaded.rs  tagged.rs
ste/src/: adapter.rs  atomic_waker.rs  lib.rs  linked_list.rs  lock_free_stack.rs  loom.rs  misc.rs  parker.rs  state.rs  submit_wake.rs  tag.rs  tagged.rs  tests.rs  wait_future.rs  worker.rs
ste/src/parker/: parking_lot.rs  thread.rs
tools/: readmes.rn
(+15 files in other folders)
