[workspace]
resolver = "2"

members = [
    "examples",
    "audio",
    "audio-core",
    "audio-device",
    "audio-generator",
    "audio-mixer",
    "generate",
    "audio-device-windows-sys",
    "audio-device-alsa-sys",
    "audio-device-pulse-sys",
    "audio-device-pipewire-sys",
    "bittle",
    "ste",
]

default-members = [
    "audio",
    "audio-core",
    "audio-device",
    "audio-generator",
    "generate",
    "bittle",
    "ste",
]

[patch.crates-io]
audio = {path = "audio"}
audio-core = {path = "audio-core"}
