[workspace]
resolver = "2"

members = [
    "examples",
    "audio",
    "audio-core",
    "audio-device",
    "audio-generator",
    "generate",
    "audio-device-alsa-sys",
    "audio-device-pulse-sys",
    "audio-device-pipewire-sys",
    "ste",
]

default-members = [
    "audio",
    "audio-core",
    "audio-device",
    "audio-generator",
    "generate",
    "ste",
]

[patch.'https://github.com/udoprog/audio']
audio = { path = "audio" }
audio-core = { path = "audio-core" }
