[workspace]
resolver = "2"

members = [
    "examples",
    "audio",
    "audio-core",
    "audio-device",
    "audio-generator",
    "generate",
    "audio-device-alsa-sys",
    "audio-device-pulse-sys",
    "audio-device-pipewire-sys",
    "ste",
]

default-members = [
    "audio",
    "audio-core",
    "audio-device",
    "audio-generator",
    "generate",
    "ste",
]

[workspace.package]
version = "0.2.0-alpha.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
documentation = "https://docs.rs/audio"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT/Apache-2.0"
keywords = ["audio", "buffer", "dsp"]
categories = ["multimedia::audio"]

[patch.'https://github.com/udoprog/audio']
audio = { path = "audio" }
audio-core = { path = "audio-core" }
