[package]
name = "audio-core"
description = "The core audio traits"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []

[dev-dependencies]
audio = { path = "../audio" }
