[package]
name = "audio-core"
version = "0.2.0-alpha.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = "The core audio traits"
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT/Apache-2.0"
keywords = ["audio", "buffer", "dsp"]
categories = ["multimedia::audio"]

[features]
default = ["std"]
std = []

[dev-dependencies]
audio = { version = "0.2.0-alpha.4", path = "../audio" }
