[package]
name = "audio-device-alsa-sys"
version = "0.2.0-alpha.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["buffer", "audio", "dsp"]
categories = ["multimedia::audio"]
repository = "https://github.com/udoprog/audio"
homepage = "https://github.com/udoprog/audio"
documentation = "https://docs.rs/audio-device-alsa-sys"
description = "audio-device system bindings for ALSA"
readme = "README.md"

[dependencies]
libc = "0.2.93"

[build-dependencies]
anyhow = "1.0"
pkg-config = "0.3.19"
