[package]
name = "audio-device-alsa-sys"
description = "audio-device system bindings for ALSA"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libc = "0.2.125"

[build-dependencies]
anyhow = "1.0.57"
pkg-config = "0.3.25"
