[package]
name = "audio-device-generate"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
publish = false

[dependencies]
windows_macros = {git = "https://github.com/udoprog/windows-rs", branch = "type-constraints"}
windows_gen = {git = "https://github.com/udoprog/windows-rs", branch = "type-constraints"}
