[package]
name = "audio-device-pipewire-sys"
version = "0.1.0-alpha.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = "audio-device system bindings for PipeWire"
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT OR Apache-2.0"
keywords = ["audio", "buffer", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
libc = "0.2.125"

[build-dependencies]
anyhow = "1.0.57"
pkg-config = "0.3.25"
