[package]
name = "audio-device-pulse-sys"
version = "0.1.0-alpha.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "audio-device system bindings for PulseAudio"
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT/Apache-2.0"
keywords = ["buffer", "audio", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
libc = "0.2.125"

[build-dependencies]
anyhow = "1.0.57"
pkg-config = "0.3.25"
