[package]
name = "audio-device-windows-sys"
version = "0.2.0-alpha.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["buffer", "audio", "dsp"]
categories = ["multimedia::audio"]
repository = "https://github.com/udoprog/audio"
homepage = "https://github.com/udoprog/audio"
documentation = "https://docs.rs/audio-device-windows-sys"
description = "audio-device system bindings for Windows APIs"
readme = "README.md"

[features]
wasapi = []
xaudio2 = []

[dependencies]
windows = {version = "0.8.0", default-features = false}
