[package]
name = "audio-device"
version = "0.1.0-alpha.6"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["buffer", "audio", "dsp"]
categories = ["multimedia::audio"]
repository = "https://github.com/udoprog/audio"
homepage = "https://github.com/udoprog/audio"
documentation = "https://docs.rs/audio-device"
description = "A library for interacting with audio devices"
readme = "README.md"

autoexamples = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
wasapi = ["windows", "events-driver"]
alsa = ["alsa-sys", "poll-driver"]
pulse = ["pulse-sys", "libc", "unix"]
pipewire = ["pipewire-sys", "libc"]
events-driver = ["windows"]
poll-driver = ["unix"]
unix = ["libc", "nix"]

[dependencies]
log = "0.4.17"
core = {package = "audio-core", version = "0.2.0-alpha.3", path = "../audio-core"}
thiserror = "1.0.31"
rand = "0.8.5"
ste = {version = "0.1.0-alpha.9", path = "../ste"}

pulse-sys = {package = "audio-device-pulse-sys", version = "0.1.0-alpha.1", path = "../audio-device-pulse-sys", optional = true}
pipewire-sys = {package = "audio-device-pipewire-sys", version = "0.1.0-alpha.1", path = "../audio-device-pipewire-sys", optional = true}

# unix
alsa-sys = {package = "audio-device-alsa-sys", version = "0.1.0-alpha.1", path = "../audio-device-alsa-sys", optional = true}
libc = { version = "0.2.125", optional = true }
nix = { version = "0.24.1", optional = true }

[dev-dependencies]
audio = { version = "0.2.0-alpha.3" }
audio-generator = {path = "../audio-generator"}
anyhow = "1.0.57"
tokio = { version = "1.18.1", features = ["full"] }

[dependencies.windows]
version = "0.36.1"
optional = true
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_Media_Audio",
]

[[example]]
name = "alsa-list"
required-features = ["alsa"]

[[example]]
name = "alsa"
required-features = ["alsa"]

[[example]]
name = "pulse"
required-features = ["pulse"]

[[example]]
name = "alsa-async"
required-features = ["alsa", "poll-driver"]

[[example]]
name = "wasapi"
required-features = ["wasapi"]

[[example]]
name = "wasapi-async"
required-features = ["wasapi"]

[[example]]
name = "events"
required-features = ["events-driver"]

[[example]]
name = "poll"
required-features = ["poll-driver"]
