[package]
name = "audio-device"
description = "A library for interacting with audio devices"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

autoexamples = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
alsa = ["alsa-sys", "poll-driver"]
pulse = ["pulse-sys", "libc", "unix"]
pipewire = ["pipewire-sys", "libc"]
events-driver = ["windows"]
poll-driver = ["unix"]
unix = ["libc"]
wasapi = [
    "windows",
    "events-driver",
    "windows?/Win32_System_Threading",
    "windows?/Win32_Foundation",
    "windows?/Win32_System_Com_StructuredStorage",
    "windows?/Win32_Security",
    "windows?/Win32_System_WindowsProgramming",
    "windows?/Win32_System_Com",
    "windows?/Win32_Media_Audio",
    "windows?/Win32_Media_KernelStreaming",
    "windows?/Win32_Media_Multimedia",
]

[dependencies]
tracing = "0.1.36"
audio-core = { path = "../audio-core" }
thiserror = "1.0.31"
rand = "0.8.5"
ste = { path = "../ste" }

pulse-sys = { package = "audio-device-pulse-sys", path = "../audio-device-pulse-sys", optional = true }
pipewire-sys = { package = "audio-device-pipewire-sys", path = "../audio-device-pipewire-sys", optional = true }

# unix
alsa-sys = { package = "audio-device-alsa-sys", path = "../audio-device-alsa-sys", optional = true }
libc = { version = "0.2.125", optional = true }

[dev-dependencies]
audio = { path = "../audio" }
audio-generator = { path = "../audio-generator" }
anyhow = "1.0.57"
tokio = { version = "1.18.1", features = ["full"] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.40.0"
optional = true

[[example]]
name = "alsa-list"
required-features = ["alsa"]

[[example]]
name = "alsa"
required-features = ["alsa"]

[[example]]
name = "pulse"
required-features = ["pulse"]

[[example]]
name = "alsa-async"
required-features = ["alsa", "poll-driver"]

[[example]]
name = "wasapi"
required-features = ["wasapi"]

[[example]]
name = "wasapi-async"
required-features = ["wasapi"]

[[example]]
name = "events"
required-features = ["events-driver"]

[[example]]
name = "poll"
required-features = ["poll-driver"]
