[package]
name = "audio-generator"
description = "Audio generator APIs"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
audio-core = { path = "../audio-core" }
