[package]
name = "audio-generator"
version = "0.1.0-alpha.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.70"
description = "Audio generator APIs"
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT OR Apache-2.0"
keywords = ["audio", "buffer", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
audio-core = { version = "0.2.0", path = "../audio-core" }
