[package]
name = "audio"
version = "0.2.0-alpha.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "A crate for working with audio in Rust"
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT/Apache-2.0"
keywords = ["audio", "buffer", "dsp"]
categories = ["multimedia::audio"]

[features]
default = ["std"]
std = ["audio-core/std"]

[dependencies]
audio-core = { version = "0.2.0-alpha.3", path = "../audio-core" }

[dev-dependencies]
rand = "0.8.5"
bittle = "0.2.1"
