[package]
name = "audio"
description = "A crate for working with audio in Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["audio-core/std"]

[dependencies]
audio-core = { path = "../audio-core" }

[dev-dependencies]
rand = "0.8.5"
bittle = "0.2.1"
