[package]
name = "bittle"
version = "0.1.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/udoprog/audio"
homepage = "https://github.com/udoprog/audio"
documentation = "https://docs.rs/bittle"
description = "A library for working with small and cheap bit sets and masks"
readme = "README.md"
