[package]
name = "rotary-examples"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rotary ="0.29.0-alpha.2"
bittle = "0.1.0"
cpal = "0.13.3"
minimp3 = {git = "https://github.com/udoprog/minimp3-rs", branch = "next"}
rubato = {git = "https://github.com/udoprog/rubato", branch = "next"}
anyhow = "1.0.40"
