[package]
name = "examples"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition.workspace = true
publish = false

[dependencies]
audio = { path = "../audio" }
bittle = "0.2.1"
cpal = "0.14.0"
minimp3 = { git = "https://github.com/udoprog/minimp3-rs", branch = "next" }
rubato = { git = "https://github.com/udoprog/rubato", branch = "next" }
anyhow = "1.0.57"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
