[package]
name = "generate"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
windows_macros = {git = "https://github.com/udoprog/windows-rs", branch = "type-constraints"}
windows_gen = {git = "https://github.com/udoprog/windows-rs", branch = "type-constraints"}
bindgen = "0.58.1"
pkg-config = "0.3.19"
