[package]
name = "generate"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
windows_macros = {version = "0.19.0"}
windows_gen = {version = "0.19.0"}
windows_reader = {version = "0.19.0"}
bindgen = "0.58.1"
pkg-config = "0.3.19"
