[package]
name = "rotary-core"
version = "0.2.0-alpha.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["buffer", "audio", "dsp"]
categories = ["multimedia::audio"]
repository = "https://github.com/udoprog/rotary"
homepage = "https://github.com/udoprog/rotary"
documentation = "https://docs.rs/rotary"
description = "A library for working with audio buffers"
readme = "README.md"

[dev-dependencies]
rotary = {version = "0.29.0-alpha.2", path = "../rotary"}
