[package]
name = "rotary"
version = "0.27.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["buffer", "audio", "dsp"]
categories = ["multimedia::audio"]
repository = "https://github.com/udoprog/rotary"
homepage = "https://github.com/udoprog/rotary"
documentation = "https://docs.rs/rotary"
description = "A library for working with audio buffers"
readme = "README.md"

[dependencies]
rotary-core = "0.1.0"

[dev-dependencies]
rand = "0.8.3"
bittle = {version = "0.1.0", path = "../bittle"}
