[package]
name = "ste"
version = "0.1.0-alpha.11"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "A single-threaded executor with some tricks up its sleeve."
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT/Apache-2.0"
keywords = ["thread", "executor"]
categories = ["concurrency"]

[features]
default = ["tokio"]

[dependencies]
tokio = { version = "1.18.1", features = ["rt"], optional = true }

[dev-dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.1", features = ["rt", "macros", "sync", "time"] }
futures = "0.3.21"

[target.'cfg(loom)'.dependencies]
loom = "0.5.4"
