[package]
name = "ste"
description = "A single-threaded executor with some tricks up its sleeve."
documentation = "https://docs.rs/audio"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["executor", "thread"]
categories = ["concurrency"]

[features]
default = ["tokio"]

[dependencies]
tokio = { version = "1.18.1", features = ["rt"], optional = true }

[dev-dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.1", features = ["rt", "macros", "sync", "time"] }
futures = "0.3.21"

[target.'cfg(loom)'.dependencies]
loom = "0.5.4"
