[package]
name = "ste"
version = "0.1.0-alpha.11"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = "A single-threaded executor with some tricks up its sleeve."
documentation = "https://docs.rs/audio"
readme = "README.md"
homepage = "https://github.com/udoprog/audio"
repository = "https://github.com/udoprog/audio"
license = "MIT OR Apache-2.0"
keywords = ["executor", "thread"]
categories = ["concurrency"]

[features]
default = ["tokio"]

[dependencies]
tokio = { version = "1.18.1", features = ["rt"], optional = true }

[dev-dependencies]
anyhow = "1.0.57"
criterion = "0.4.0"
tokio = { version = "1.18.1", features = ["rt", "macros", "sync", "time"] }
futures = "0.3.21"

[[bench]]
name = "benches"
harness = false

[target.'cfg(loom)'.dependencies]
loom = "0.5.4"
